# GARR-Workflow-Orchestrator

./: NOTICE  README.md
garr/: alembic.ini  graphql_federation.py  pyproject.toml  scheduling  server  tasks.py
garr/auth/: __init__.py  oidc.py
garr/cli/: __init__.py
garr/migrations/: env.py
garr/migrations/versions/schema/: 2025-08-07_5aa98e9a9b21_v4_2_0_migration.py
garr/products/services/: optical_device.py  optical_device_port.py  optical_digital_service.py  optical_spectrum.py
garr/products/shared/types/: coordinates.py  ip_address.py
garr/schedules/: __init__.py
garr/services/: netbox.py  processes.py
garr/services/infinera/: __init__.py
garr/templates/: optical_device.yml  optical_digital_service.yml  optical_fiber.yml  optical_muxed_section.yml  optical_spectrum.yml  pop.yml
garr/translations/: en-GB.json
garr/utils/custom_types/: coordinates.py  frequencies.py  ip_address.py
garr/workflows/: DOCUMENTATION_BEST_PRACTICES.md  __init__.py
garr/workflows/optical_device/: create_optical_device.py  modify_optical_device.py  terminate_optical_device.py  validate_optical_device.py
garr/workflows/optical_digital_service/: create_optical_digital_service.py  modify_optical_digital_service.py  terminate_optical_digital_service.py  validate_optical_digital_service.py
garr/workflows/optical_fiber/: create_optical_fiber.py  modify_optical_fiber.py  terminate_optical_fiber.py  validate_optical_fiber.py
garr/workflows/optical_spectrum/: create_optical_spectrum.py  modify_optical_spectrum.py  shared.py  terminate_optical_spectrum.py  validate_optical_spectrum.py
garr/workflows/partner/: create_partner.py  terminate_partner.py  validate_partner.py
garr/workflows/pop/: create_pop.py  modify_pop.py  terminate_pop.py  validate_pop.py
garr/workflows/tasks/: bulk_create_optical_devices.py  bulk_create_optical_fibers.py  bulk_validate_optical_fibers.py  check_netbox_connection.py  import_fibers_from_tnms.py  import_pops_from_netbox.py  purge_subscription_from_database.py  task_check_tnms_connection.py
(+23 files in other folders)
