[project]
name = "wfo"
version = "3.12.8"
description = "Progetto per automatizzare il provisioning della rete GARR"

[project.urls]
Homepage = "https://gitlab.dir.garr.it/kb-servizi/wfo-pilot"

[tool.mypy]
exclude = []
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true
show_error_codes = true
show_column_numbers = true
disable_error_code = "annotation-unchecked"
enable_error_code = "ignore-without-code"

[tool.pyright]
typeCheckingMode = "off"
reportInvalidTypeForm = false


[tool.ruff]
exclude = [
    "venv",
    ".venv",
]

line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    # flake8-bugbear
    "B",
    "BLE",
    "C",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    # pycodestyle
    "E",
    "EM",
    "ERA",
    # Pyflakes
    "F",
    "FA",
    "FBT",
    "FLY",
    "FURB",
    "G",
    # isort
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "R",
    "RET",
    "RSE",
    "RUF",
    "S",
    # flake8-simplify
    "SIM",
    "SLF",
    "T",
    "T20",
    "TID",
    "TRY",
    # pyupgrade
    "UP",
    "W",
    "YTT"
]
ignore = [
    "B901",
    "C901",
    "COM812",
    "D101",
    "D103",
    "D203",
    "D205",
    "D212",
    "D213",
    "EM101",
    "ISC001",
    "N805",
    "PLC2801",
    "PLR0913",
    "PLR0904",
    "PLW1514",
    "FURB118",
    "S311",
    "TRY003",
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
